# sputnik-golem

./: .env  .env.example  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  codecov.yml  docker-compose.yml
.github/workflows/: ci.yml  rust.yml
accountant/: Cargo.toml
accountant-stub/: Cargo.toml
accountant-stub/src/: bindings.rs  lib.rs
accountant/src/: bindings.rs  lib.rs
accountant/wit/: accountant.wit
admin-api/: Cargo.toml
admin-api/src/: bindings.rs  lib.rs
admin-api/wit/: admin-api.wit
adminapi/: Cargo.toml
adminapi/src/: bindings.rs  lib.rs
adminapi/wit/: admin-api.wit
api/: adminapi.jsonnet  ethereummonitor.jsonnet  traderapi.jsonnet
bitcoinmonitor/: Cargo.toml
bitcoinmonitor/src/: bindings.rs  lib.rs
bitcoinmonitor/wit/: bitcoinmonitor.wit
chainmonitor/: Cargo.toml
chainmonitor/src/: main.rs
ethereummonitor/: Cargo.toml
ethereummonitor-stub/: Cargo.toml
ethereummonitor-stub/src/: bindings.rs  lib.rs
ethereummonitor/src/: bindings.rs  lib.rs  main.rs
ethereummonitor/wit/: ethereummonitor.wit
ids/: Cargo.toml
ids-stub/: Cargo.toml
ids-stub/src/: bindings.rs  lib.rs
ids-stub/wit/: _stub.wit
ids/src/: bindings.rs  lib.rs
ids/wit/: ids.wit
matching-engine/: Cargo.toml
matching-engine-stub/: Cargo.toml
matching-engine-stub/src/: bindings.rs  lib.rs
matching-engine-stub/wit/: _stub.wit
matching-engine/src/: bindings.rs  lib.rs
matching-engine/wit/: matching-engine.wit
registry/: Cargo.toml
registry-stub/: Cargo.toml
registry-stub/src/: bindings.rs  lib.rs
registry/src/: bindings.rs  lib.rs
registry/wit/: registry.wit
scripts/: build.sh  clean-docker.sh  deploy-api.sh  deploy-apis.sh  integration-test.sh  launch-workers.sh  update-api-definition.sh  update-api-definitions.sh  update-component.sh  update-components.sh  update-template.sh  update-templates.sh
src/: bindings.rs  lib.rs
traderapi/: Cargo.toml
traderapi/src/: bindings.rs  lib.rs
traderapi/wit/: trader-api.wit
wit/: world.wit
