[package]
name = "accountant"
edition = "2021"
version = "0.1.0"

[package.metadata.component]
package = "sputnik:accountant"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."sputnik:registry-stub"]
path = "wit/deps/sputnik_registry-stub"

[package.metadata.component.target.dependencies."sputnik:matching-engine"]
path = "wit/deps/sputnik_matching-engine"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."sputnik:matching-engine-stub"]
path = "wit/deps/sputnik_matching-engine-stub"

[package.metadata.component.target.dependencies."sputnik:registry"]
path = "wit/deps/sputnik_registry"

[dependencies]
assert_unordered = "0.3.5"
mockall = "0.12.1"

[dependencies.wit-bindgen]
version = "0.16.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
name = "accountant"
edition = "2021"
crate-type = ["cdylib"]
required-features = []
