[package]
name = "accountant"
edition = "2021"
version = "0.1.0"

[package.metadata.component]
package = "sputnik:accountant"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."sputnik:accountant"]
path = "wit/deps/sputnik_accountant"

[package.metadata.component.target.dependencies."sputnik:accountant-stub"]
path = "wit/deps/sputnik_accountant-stub"

[package.metadata.component.target.dependencies."sputnik:matching-engine"]
path = "wit/deps/sputnik_matching-engine"

[package.metadata.component.target.dependencies."sputnik:matching-engine-stub"]
path = "wit/deps/sputnik_matching-engine-stub"

[package.metadata.component.target.dependencies."sputnik:registry"]
path = "wit/deps/sputnik_registry"

[package.metadata.component.target.dependencies."sputnik:registry-stub"]
path = "wit/deps/sputnik_registry-stub"

[dependencies]
assert_unordered = "0.3.5"
mockall = "0.12.1"
num-bigint = "0.4.5"
num-traits = "0.2.19"

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
name = "accountant"
edition = "2021"
crate-type = ["cdylib"]
required-features = []
