[package]
name = "ethereummonitor"
edition = "2021"
version = "0.1.0"

[package.metadata.component]
package = "sputnik:ethereummonitor"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."sputnik:accountant"]
path = "wit/deps/sputnik_accountant"

[package.metadata.component.target.dependencies."sputnik:accountant-stub"]
path = "wit/deps/sputnik_accountant-stub"

[package.metadata.component.target.dependencies."sputnik:matching-engine"]
path = "wit/deps/sputnik_matching-engine"

[package.metadata.component.target.dependencies."sputnik:matching-engine-stub"]
path = "wit/deps/sputnik_matching-engine-stub"

[package.metadata.component.target.dependencies."sputnik:registry"]
path = "wit/deps/sputnik_registry"

[package.metadata.component.target.dependencies."sputnik:registry-stub"]
path = "wit/deps/sputnik_registry-stub"

[dependencies.ethers]
version = "2.0.14"

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
crate-type = ["cdylib"]
required-features = []
