[package]
name = "ids-stub"
edition = "2021"
version = "0.0.1"

[package.metadata.component]
package = "sputnik:ids"

[package.metadata.component.target]
world = "wasm-rpc-stub-ids"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."sputnik:ids"]
path = "wit/deps/sputnik_ids"

[dependencies.golem-wasm-rpc]
version = "0.0.22"
features = ["stub"]
default-features = false

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
