[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
priority-queue = "2.0.2"
wit-bindgen = { version = "0.22.0", default-features = false, features = ["realloc"] }
once_cell = "1.19.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:sputnik"

[package.metadata.component.dependencies]
