[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "2.0.2"
wit-bindgen = { version = "0.16.0", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "sputnik:matching-engine"

[package.metadata.component.dependencies]
