[package]
name = "registry-stub"
edition = "2021"
version = "0.0.1"

[package.metadata.component]
package = "sputnik:registry"

[package.metadata.component.target]
world = "wasm-rpc-stub-registry"
path = "wit"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."sputnik:registry"]
path = "wit/deps/sputnik_registry"

[dependencies.golem-wasm-rpc]
version = "0.0.22"
features = ["stub"]
default-features = false

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]
required-features = []

[profile.release]
opt-level = "s"
lto = true
strip = true
