[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_unordered = "0.3.5"
wit-bindgen = { version = "0.17.0", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "sputnik:registry"

[package.metadata.component.dependencies]
