[package]
name = "traderapi"
edition = "2021"
version = "0.1.0"
license = "Proprietary"

[package.metadata.component]
package = "sputnik:traderapi"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies."sputnik:ids"]
path = "wit/deps/sputnik_ids"

[package.metadata.component.target.dependencies."sputnik:registry"]
path = "wit/deps/sputnik_registry"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/wasm-rpc"

[package.metadata.component.target.dependencies."sputnik:accountant"]
path = "wit/deps/sputnik_accountant"

[package.metadata.component.target.dependencies."sputnik:ids-stub"]
path = "wit/deps/sputnik_ids-stub"

[package.metadata.component.target.dependencies."sputnik:matching-engine"]
path = "wit/deps/sputnik_matching-engine"

[package.metadata.component.target.dependencies."sputnik:matching-engine-stub"]
path = "wit/deps/sputnik_matching-engine-stub"

[package.metadata.component.target.dependencies."sputnik:accountant-stub"]
path = "wit/deps/sputnik_accountant-stub"

[package.metadata.component.target.dependencies."sputnik:registry-stub"]
path = "wit/deps/sputnik_registry-stub"

[dependencies]
chrono = "0.4.38"
mockall = "0.12.1"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.wit-bindgen]
version = "0.17.0"
features = ["realloc"]
default-features = false

[lib]
path = "src/lib.rs"
name = "traderapi"
edition = "2021"
crate-type = ["cdylib"]
required-features = []
